<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.eteks.sweethome3d</groupId>
    <artifactId>sweetenergy3d</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    
    <name>SweetEnergy3D Plugin for Sweet Home 3D</name>
    <description>Plugin pour exporter les plans Sweet Home 3D vers Energy3D</description>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>com.eteks.sweethome3d</groupId>
            <artifactId>sweethome3d</artifactId>
            <version>7.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../SweetHome3D-7.5-portable/lib/SweetHome3D.jar</systemPath>
        </dependency>
        
        <!-- Energy3D dependencies -->
        <dependency>
            <groupId>org.concord.energy3d</groupId>
            <artifactId>energy3d</artifactId>
            <version>8.7.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../energy3d_src/exe/energy3d.jar</systemPath>
        </dependency>
        
        <!-- Ardor3D dependencies -->
        <dependency>
            <groupId>com.ardor3d</groupId>
            <artifactId>ardor3d-core</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../energy3d_src/exe/lib/ardor3d/ardor3d-core.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.ardor3d</groupId>
            <artifactId>ardor3d-math</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../energy3d_src/exe/lib/ardor3d/ardor3d-math.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.ardor3d</groupId>
            <artifactId>ardor3d-jogl</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../energy3d_src/exe/lib/ardor3d/ardor3d-jogl.jar</systemPath>
        </dependency>
        <!-- ASM pour corriger le bytecode des stubs MaterialState/LightState (superclasse Object → RenderState) à l'exécution -->
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>9.6</version>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <!-- S'assurer que les dépendances système sont sur le classpath de compilation -->
                    <compilerArguments>
                        <verbose/>
                    </compilerArguments>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            
            <!-- Inclure ASM dans le JAR du plugin pour que Sweet Home 3D le trouve à l'exécution -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <artifactSet>
                                <includes>
                                    <include>org.ow2.asm:asm</include>
                                </includes>
                            </artifactSet>
                            <minimizeJar>false</minimizeJar>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}</directory>
                                    <includes>
                                        <include>ApplicationPlugin.properties</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>create-sh3p</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <copy file="${project.build.directory}/${project.build.finalName}.jar"
                                      tofile="${project.build.directory}/sweetenergy3d.sh3p"
                                      overwrite="true"/>
                                <echo message="Fichier .sh3p cree: ${project.build.directory}/sweetenergy3d.sh3p"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
